Document get user tokens.
